--- a/html/landingpage.html
+++ b/html/landingpage.html
@@ -9,35 +9,24 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-primary">     
-        <div class="collapse navbar-collapse d-flex flex-row justify-content-between">
-            <div class="brand-name text-center d-flex flex-row">
-                <img src="../images/icon-poll.png" alt="the logo should be here">
-                <h1 class="nav-item nav-link active text-white mt-3">Poll-i</h1>
-            </div>
-            <div class="mx-auto">
-                <h4 class="text-white">surveying made easy</h4>
-            </div>
-            <div class="navbar-nav ml-auto class="col-2">
-                <a href="#" class="nav-item nav-link text-white">Sign up</a>
-                <a href="#" class="nav-item nav-link text-white">Login</a>
-            </div>
+    <div class="bg"></div>
+    <header class="d-flex flex-row justify-content-between">
+        <div class="d-flex flex-row">
+            <img src="../images/icon-poll.png" class="mr-2" id="icon"></img>
+            <!--p class="h1 text-black" style="align-self: center;">Poll-i</p>-->
+        </div>     
+        <div class="h2 text-primary" style="align-self: center;">surveying made easy</div>
+        <div class="d-flex flex-row" style="align-self: center;">
+            <p class="h5 text-white mr-3">log in</p>
+            <p class="h5 text-white mr-3">sign up</p>        
         </div>
-    </nav>
-    <ul class="nav d-flex flex-column">
-        <li class="nav-item mt-3">
-          <a class="nav-link h4 " href="#">Create poll</a>
-        </li>
-        <li class="nav-item mt-3">
-          <a class="nav-link h4" href="#">Polls I started</a>
-        </li>
-        <li class="nav-item mt-3">
-          <a class="nav-link h4" href="#">Polls I filled</a>
-        </li>
-        <li class="nav-item mt-3">
-            <a class="nav-link h4" href="#">Invitations</a>
-          </li>
-      </ul>
+    </header>
+    <div class="nav d-flex flex-column ">
+          <a class="nav-item mt-5 nav-link h4 btn-info btn-md col-2" href="#">Create poll</a>
+          <a class="nav-item mt-1 nav-link h4 btn-info btn-lg col-2" href="#">Polls I filled</a>
+          <a class="nav-item mt-1 nav-link h4 btn-info btn-md col-2" href="#">Polls I started</a>
+          <a class="nav-item mt-1 nav-link h4 btn-info btn-lg col-2" href="#">Invitations</a>
+      <div>
       <footer class="d-flex flex-row fixed-bottom footer-item justify-content-center">
             <p class="mx-3">Copyright 2020</p>
             <p class="mx-3">Terms and conditions</p>
