--- a/html/landingpage.html
+++ b/html/landingpage.html
@@ -52,7 +52,7 @@
         <div class="d-flex flex-row-reverse">
             <button type="submit" class="btn btn-primary mr-4 mb-3" id="btn-signup">Sign up</button>
             <!--TODO: insert url to Cancel button to href refresh the page-->
-            <a href="#" class="btn btn-primary ml-5 mr-3 mb-3">Cancel</a>        
+            <a href="#" class="btn btn-primary ml-5 mr-3 mb-3">Cancel</a> 
         </div>
     </form>
 
@@ -85,7 +85,7 @@
             <p class="mx-3">Privacy</p>
     </footer>
 </body>
-<script src="../client-side js/landingPage.js"></script>
+<script src="../client_side_script/landingPage.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </html>
