fix link href and script src tags

--- a/html/landingpage.html
+++ b/html/landingpage.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Poll-i</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../public/css/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header class="d-flex flex-row justify-content-between">
         <div class="d-flex flex-row">
-            <img src="../images/icon-poll.png" class="mr-2" id="icon"></img>
+            <img src="../public/images/icon-poll.png" class="mr-2" id="icon"></img>
             <!--p class="h1 text-black" style="align-self: center;">Poll-i</p>-->
         </div>     
         <div class="h2 text-primary" style="align-self: center;">surveying made easy</div>
@@ -25,10 +25,10 @@
         <!--nemu items-->
 
     <div class="nav d-flex flex-column ">
-          <a class="nav-item mt-5 nav-link h4 btn-info btn-md col-2 text-center" href="#">Create poll</a>
-          <a class="nav-item mt-1 nav-link h4 btn-info btn-lg col-2 text-center" href="#">Polls I filled</a>
-          <a class="nav-item mt-1 nav-link h4 btn-info btn-md col-2 text-center" href="#">Polls I started</a>
-          <a class="nav-item mt-1 nav-link h4 btn-info btn-lg col-2 text-center" href="#">Invitations</a>
+          <a class="nav-item mt-5 nav-link h4 btn-info btn-md col-2 text-center rounded" href="#">Create poll</a>
+          <a class="nav-item mt-1 nav-link h4 btn-info btn-md col-2 text-center rounded" href="#">Polls I filled</a>
+          <a class="nav-item mt-1 nav-link h4 btn-info btn-md col-2 text-center rounded" href="#">Polls I started</a>
+          <a class="nav-item mt-1 nav-link h4 btn-info btn-md col-2 text-center rounded" href="#">Invitations</a>
     </div>
 
     <!--signup form-->
@@ -85,7 +85,7 @@
             <p class="mx-3">Privacy</p>
     </footer>
 </body>
-<script src="../client_side_script/landingPage.js"></script>
+<script src="../public/client_side_script/landingPage.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </html>
