--- a/html/landingpage.html
+++ b/html/landingpage.html
@@ -59,12 +59,13 @@
         <label for="form-login" class="h2 ml-auto mr-4 mt-3">Login</label>
         <div class="form-group px-4">
             <label for="email-login">Email address</label>
-            <input type="email" class="form-control" id="email-login" aria-describedby="emailHelp" placeholder="Enter email">
+            <input type="email" name="email" class="form-control" id="email-login" aria-describedby="emailHelp" placeholder="Enter email">
             <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
         </div>
         <div class="form-group px-4">
             <label for="password-login">Password</label>
-            <input type="password" class="form-control" id="password-login" placeholder="Password">
+            <input type="password" name="password" class="form-control" id="password-login" placeholder="Password">
+            
         </div>
         
         <div class="d-flex flex-row-reverse mb-2">
