--- a/html/landingpage.html
+++ b/html/landingpage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Poll-i</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
@@ -22,10 +22,8 @@
     </header>
     <div id="home-menu" class="d-flex flex-column">
 
-    <!--nemu items-->
     <!--signup form-->
 
-    <div id="content-main"></div>
     <form method="POST" action="/user/signup" id="form-signup" class="d-flex flex-column justify-content-center w-25 mx-auto border border-secondary rounded bg-white fixed-top">
         <label for="signup" class="h2 ml-auto mr-4 mt-3 mb-2">Sign up</label>
         <div class="form-group px-4 mb-2">
