modify default button type to "button"

--- a/html/landingpage.html
+++ b/html/landingpage.html
@@ -47,7 +47,7 @@
         <div class="d-flex flex-row-reverse">
             <button type="submit" class="btn btn-primary mr-4 mb-3" id="btn-signup">Sign up</button>
             <!--TODO: insert url to Cancel button to href refresh the page-->
-            <button class="btn btn-primary ml-5 mr-3 mb-3">Cancel</button> 
+            <button class="btn btn-primary ml-5 mr-3 mb-3" type="button" id="btn-cancel-signup">Cancel</button> 
         </div>
     </form>
 
@@ -69,7 +69,7 @@
         <div class="d-flex flex-row-reverse mb-2">
             <button type="submit" class="btn btn-primary mr-4 mb-3" id="btn-login">Log in</button>
             <!--TODO: insert url to Cancel button to href refresh the page-->
-            <button class="btn btn-primary ml-5 mr-3 mb-3">Cancel</button>    
+            <button class="btn btn-primary ml-5 mr-3 mb-3" type="button" id="btn-cancel-login">Cancel</button>    
         </div>
     </form>
     </div>
