align center "surveying made easy" in header

--- a/html/home.html
+++ b/html/home.html
@@ -14,7 +14,7 @@
             <img src="../images/icon-poll.png" class="mr-2" id="icon"></img>
             <!--p class="h1 text-black" style="align-self: center;">Poll-i</p>-->
         </div>     
-        <div class="h2 text-primary" style="align-self: center;">surveying made easy</div>
+        <div class="h2 text-primary" style="align-self: center; margin-left: -10vh;">surveying made easy</div>
         <div class="d-flex flex-row" style="align-self: center;">
             <a href="#" id="signup-btn" class="h5 text-white mr-3 text-decoration-none">sign out</a>       
         </div>
