--- a/html/createpoll.html
+++ b/html/createpoll.html
@@ -68,6 +68,10 @@
                     <button class="btn btn-info" id="add-btn" type="button">Add answer</button>
                     <button class="btn btn-info" id="btn-create" type="submit">Create poll</button>  
             </div>
+            <div class="form-group row">
+                <label for="input-datetime" class="col-sm-2 col-form-label">Expiration date</label>
+                <input name="expiration" size="16" class="form-control" type="text" id="input-datetime" placeholder="yyyy-mm-dd hh:min">
+            </div>
             <div class="form-group row" id="poll-options">
                 <label for="poll-answer" class="col-sm-2 col-form-label">Answer text</label>
                 <div class="col-sm-10">
