--- a/html/home.html
+++ b/html/home.html
@@ -45,7 +45,7 @@
     </div>
 
     <div id="content-main">
-        <form action="POST" action="" class="bg-light col-10" id="form-create">
+        <form method="POST" action="/poll/create" class="bg-light col-10" id="form-create">
             <div class="form-group row">
                 <label for="poll-title" class="col-sm-2 col-form-label">Title</label>
                 <div class="col-sm-10">
@@ -62,9 +62,13 @@
                     <div class="col-sm-2">
                         <label class="form-check-label" for="is-multiple">Multiple choice</label>
                     </div>
-                    <input type="checkbox" name="isMultipleChoice" class="form-check-input col-sm-6" id="is-multiple">
+                    <input type="checkbox" name="isMultipleChoice" class="form-check-input col-sm-6" id="cb-multiple">
                     <button class="btn btn-info" id="add-btn" type="button">Add answer</button>
                     <button class="btn btn-info" id="btn-create" type="submit">Create poll</button>  
+            </div>
+            <div class="form-group row">
+                <label for="input-datetime" class="col-sm-2 col-form-label">Expiration date</label>
+                <input name="expiration" class="form-control col-3" size="16" type="text" id="input-datetime" placeholder="YYYY-MM-DD hh:mm">         
             </div>
             <div class="form-group row" id="poll-options">
                 <label for="poll-answer" class="col-sm-2 col-form-label">Answer text</label>
