--- a/html/home.html
+++ b/html/home.html
@@ -45,7 +45,7 @@
     </div>
 
     <div id="content-main">
-        <form method="POST" action="/poll/create" class="bg-light col-10" id="form-create">
+        <div class="bg-light col-10" id="form-create">
             <div class="form-group row">
                 <label for="poll-title" class="col-sm-2 col-form-label">Title</label>
                 <div class="col-sm-10">
@@ -68,7 +68,7 @@
             </div>
             <div class="form-group row">
                 <label for="input-datetime" class="col-sm-2 col-form-label">Expiration date</label>
-                <input name="expiration" class="form-control col-3" size="16" type="text" id="input-datetime" placeholder="YYYY-MM-DD hh:mm">         
+                <input name="expiration" class="form-control col-3" size="16" type="datetime" id="input-datetime" placeholder="YYYY-MM-DD hh:mm">         
             </div>
             <div class="form-group row" id="poll-options">
                 <label for="poll-answer" class="col-sm-2 col-form-label">Answer text</label>
@@ -76,7 +76,7 @@
                         <input type="text" name="title" class="form-control" id="poll-answer" placeholder="Answer">
                 </div>
             </div>
-        </form> 
+        <div> 
     </div>
 
 
