text-white for menu items

--- a/html/home.html
+++ b/html/home.html
@@ -23,22 +23,22 @@
 
     <div class="nav d-flex flex-column">
         <a
-            class="nav-item mt-5 nav-link h4 btn-info btn-md col-2 text-center rounded"
-            href="#"
+            class="nav-item mt-5 nav-link h4 btn-info btn-md col-2 text-center text-white rounded"
+            href="/"
             >Create poll</a
         >
         <a
-            class="nav-item mt-1 nav-link h4 btn-info btn-md col-2 text-center rounded"
+            class="nav-item mt-1 nav-link h4 btn-info btn-md col-2 text-center text-white rounded"
             href="#"
             >Polls I filled</a
         >
         <a
-            class="nav-item mt-1 nav-link h4 btn-info btn-md col-2 text-center rounded"
+            class="nav-item mt-1 nav-link h4 btn-info btn-md col-2 text-center text-white rounded"
             id="mypolls-menu"
             >Polls I started</a
         >
         <a
-            class="nav-item mt-1 nav-link h4 btn-info btn-md col-2 text-center rounded"
+            class="nav-item mt-1 nav-link h4 btn-info btn-md col-2 text-center text-white rounded"
             href="#"
             >Invitations</a
         >
