rename menu items

--- a/html/home.html
+++ b/html/home.html
@@ -30,17 +30,17 @@
         <a
             class="nav-item mt-1 nav-link h4 btn-info btn-md col-2 text-center text-white rounded"
             href="#"
-            >Polls I filled</a
+            >My votes</a
         >
         <a
             class="nav-item mt-1 nav-link h4 btn-info btn-md col-2 text-center text-white rounded"
             id="mypolls-menu"
-            >Polls I started</a
+            >My polls</a
         >
         <a
             class="nav-item mt-1 nav-link h4 btn-info btn-md col-2 text-center text-white rounded"
             href="#"
-            >Invitations</a
+            >Open polls</a
         >
     </div>
 
