add script tags for pollLoader.js, menuHandler.js

--- a/html/home.html
+++ b/html/home.html
@@ -29,7 +29,6 @@
         >
         <a
             class="nav-item mt-1 nav-link h4 btn-info btn-md col-2 text-center text-white rounded"
-            href="#"
             >My votes</a
         >
         <a
@@ -39,7 +38,7 @@
         >
         <a
             class="nav-item mt-1 nav-link h4 btn-info btn-md col-2 text-center text-white rounded"
-            href="#"
+            id="openpolls-menu"
             >Open polls</a
         >
     </div>
@@ -90,7 +89,8 @@
 </body>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script src="/client_side_script/home.js"></script>
-<script src="/client_side_script/mypoll.js"></script>
+<script src="/client_side_script/pollLoader.js"></script>
+<script src="/client_side_script/menuHandler.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </html>
