add id attribute to myvotes menu item

--- a/html/home.html
+++ b/html/home.html
@@ -29,6 +29,7 @@
         >
         <a
             class="nav-item mt-1 nav-link h4 btn-info btn-md col-2 text-center text-white rounded"
+            id="myvotes-menu"
             >My votes</a
         >
         <a
