--- a/html/home.html
+++ b/html/home.html
@@ -49,7 +49,7 @@
             <div class="form-group row">
                 <label for="poll-title" class="col-sm-2 col-form-label">Title</label>
                 <div class="col-sm-10">
-                    <input type="text" name="title" class="form-control" id="poll-title" placeholder="Enter the title">
+                    <input autofocus type="text" name="title" class="form-control" id="poll-title" placeholder="Enter the title">
                 </div>
             </div>
             <div class="form-group row">
@@ -76,6 +76,7 @@
                         <input type="text" name="title" class="form-control" id="poll-answer" placeholder="Answer">
                 </div>
             </div>
+            <div id="poll-options-new"></div>
         <div> 
     </div>
 
