--- a/html/home.html
+++ b/html/home.html
@@ -90,6 +90,7 @@
     </footer>
 </body>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<script src="/client_side_script/message.js"></script>
 <script src="/client_side_script/home.js"></script>
 <script src="/client_side_script/pollLoader.js"></script>
 <script src="/client_side_script/menuHandler.js"></script>
