add message container div

--- a/html/home.html
+++ b/html/home.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+    <div id="messages"></div>
     <header class="d-flex flex-row justify-content-between">
         <div class="d-flex flex-row">
             <img src="../images/icon-poll.png" class="mr-2" id="icon"></img>
@@ -79,7 +80,6 @@
             <div id="poll-options-new"></div>
         <div> 
     </div>
-
 
     <footer class="d-flex flex-row fixed-bottom footer-item justify-content-center">
             <p class="mx-3">Copyright 2020</p>
